# x_sim

./: README.md
sim/: .gitignore  CMakeLists.txt  Makefile  README-VSCODE.md  aic.cpp  aic.h  clock.cpp  clock.h  config.toml  config_cache.cpp  config_cache.h  config_loader.cpp  config_loader.h  config_mgr.cpp  config_mgr.h  cube.cpp  cube.h  fifo.h  main.cpp  mem_if.cpp  mem_if.h  memory_interface.cpp  memory_interface.h  mini_toml.cpp  model_cfg.toml  pe.cpp  pe.h  processing_element.cpp  processing_element.h  sim_top.cpp  sim_top.h  systolic.cpp  systolic.h  systolic_common.h  systolic_sim  types.h  x_sim
sim/.github/workflows/: ci-root.yml  jscpd-schedule.yml
sim/config/: config.cpp  config.h  config_mgr.cpp  config_mgr.h  mini_toml.cpp  mini_toml.h  toml_adapter.cpp  toml_adapter.h  toml_parser.cpp  toml_parser.h
sim/tests/: CMakeLists.txt  all_tests_with_disabled.xml  test_case_io.cpp  test_config.cpp  test_integration.cpp  test_logging.cpp  test_toml_parser.cpp  test_verify.cpp  utils.cpp  utils.h  utils_test.cpp  verify_test.cpp
sim/tests/cases/: README.md  case_DataflowModes.toml  case_QuickLarge.toml  case_Scaling.toml  case_SmallMatrix.toml
sim/tools/: jscpd_summary.py
sim/util/: bin_io.h  case_io.cpp  case_io.h  log.cpp  log.h  path.cpp  path.h  utils.cpp  utils.h  verify.cpp  verify.h
